--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore DS Store
+# Ignore DS Store & node_modules
 .DS_Store
+node_modules
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
